# opencv-wasm

./: .gitignore  Cargo.toml  README.md  build.rs  cxx.sh
.cargo/: config.toml
examples/: read.rs
include/: imgcodecs.hpp  imgproc.hpp  manual.hpp  test.hpp
lib/: opencv.wasm  test.sh
src/: highgui.rs  imgcodecs.rs  imgproc.rs  lib.rs
